Add machine translation

--- a/l10n/po/ja_JP/_guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka.adoc.po
@@ -502,8 +502,9 @@ msgstr "Kafka コネクタを設定する必要があります。これは `appl
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:251
+#, fuzzy
 msgid "`mp.messaging.[outgoing|incoming].{channel-name}.property=value`"
-msgstr ""
+msgstr "`mp.messaging.[outgoing|incoming].{channel-name}.property=value`"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:253
@@ -750,18 +751,21 @@ msgstr "`io.smallrye.reactive.messaging.annotations.Emitter` , `io.smallrye.reac
 
 #. type: delimited block =
 #: upstream/_guides/kafka.adoc:381
+#, fuzzy
 msgid "`org.eclipse.microprofile.reactive.messaging.Emitter`"
-msgstr ""
+msgstr "`org.eclipse.microprofile.reactive.messaging.Emitter`"
 
 #. type: delimited block =
 #: upstream/_guides/kafka.adoc:382
+#, fuzzy
 msgid "`org.eclipse.microprofile.reactive.messaging.Channel`"
-msgstr ""
+msgstr "`org.eclipse.microprofile.reactive.messaging.Channel`"
 
 #. type: delimited block =
 #: upstream/_guides/kafka.adoc:383
+#, fuzzy
 msgid "`org.eclipse.microprofile.reactive.messaging.OnOverflow`"
-msgstr ""
+msgstr "`org.eclipse.microprofile.reactive.messaging.OnOverflow`"
 
 #. type: delimited block =
 #: upstream/_guides/kafka.adoc:385
@@ -1180,13 +1184,15 @@ msgstr "`@Blocking` アノテーションは2つあります。"
 
 #. type: delimited block =
 #: upstream/_guides/kafka.adoc:626
+#, fuzzy
 msgid "`io.smallrye.reactive.messaging.annotations.Blocking`"
-msgstr ""
+msgstr "`io.smallrye.reactive.messaging.annotations.Blocking`"
 
 #. type: delimited block =
 #: upstream/_guides/kafka.adoc:627
+#, fuzzy
 msgid "`io.smallrye.common.annotation.Blocking`"
-msgstr ""
+msgstr "`io.smallrye.common.annotation.Blocking`"
 
 #. type: delimited block =
 #: upstream/_guides/kafka.adoc:632
