--- a/l10n/po/ja_JP/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.12 released - Fast jar as default, Multipart support for RESTEasy Reactive'\n"
@@ -34,36 +34,49 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: Quarkus 1.12リリース - Fast jarをデフォルトとして、RESTEasy Reactiveのマルチパートをサポートします。\n"
+"date: 2021-02-23\n"
+"tags: release\n"
+"synopsis: リリースされたばかりのQuarkus 1.12.0.Finalでは、アプリケーションがデフォルトでfast-jarとしてパッケージ化されるようになりました。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:11
+#, fuzzy
 msgid "It is my pleasure to announce the release of Quarkus 1.12.0.Final."
-msgstr ""
+msgstr "Quarkus 1.12.0.Finalのリリースを発表できることを嬉しく思います。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:13
+#, fuzzy
 msgid "It comes with some significant changes:"
-msgstr ""
+msgstr "それはいくつかの重要な変更が付属しています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:15
+#, fuzzy
 msgid "Fast jar is now the default packaging when you build a jar."
-msgstr ""
+msgstr "Fast jar は、jar をビルドする際のデフォルトのパッケージングになりました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:16
+#, fuzzy
 msgid "RESTEasy Reactive keeps improving and it now has support for multipart."
-msgstr ""
+msgstr "RESTEasy Reactiveは改善を続け、マルチパートをサポートするようになりました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:17
+#, fuzzy
 msgid "Vert.x Axle and RX Java managed instances have been dropped."
-msgstr ""
+msgstr "Vert.x AxleとRX Javaのマネージドインスタンスを削除しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:18
+#, fuzzy
 msgid "We upgraded to GraalVM 21.0."
-msgstr ""
+msgstr "GraalVM 21.0にアップグレードしました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:19
@@ -73,8 +86,9 @@ msgstr "移行ガイド"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:22
+#, fuzzy
 msgid "Eager to migrate your existing applications? Here is https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.12[our migration guide for 1.12]."
-msgstr ""
+msgstr "既存のアプリケーションの移行をお考えですか？ここに link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.12[1.12の移行ガイド]があります。"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:23
@@ -84,29 +98,33 @@ msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:25
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Fast jar as default"
-msgstr ""
+msgstr "デフォルトの高速ジャー"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:30
+#, fuzzy
 msgid "Quarkus has always offered several types of jar packaging.  Historically, we had either a standard jar packaging (the one with the `-runner.jar` and the `lib/` directory) or an uber jar.  In Quarkus 1.5, we introduced a new packaging type called Fast jar, which main objective was to further improve our boot time."
-msgstr ""
+msgstr "Quarkusでは、常にいくつかのタイプのジャーパッケージを提供してきました。歴史的には、標準のジャーパッケージ（ `-runner.jar` と `lib/` ディレクトリのあるもの）か、ユーバージャーがありました。Quarkus 1.5では、Fast jarと呼ばれる新しいパッケージタイプを導入しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:33
+#, fuzzy
 msgid "In Quarkus time, 1.5 means a century ago and we think Fast jar is now ready for prime time and brings enough improvements to justify the change.  Thus the decision to make it the default starting with 1.12."
-msgstr ""
+msgstr "Quarkus時間では、1.5は100年前のことを意味し、Fast jarは今がプライムタイムの準備ができており、変更を正当化するのに十分な改善をもたらしていると考えています。そのため、1.12からデフォルトにすることを決定しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:35
+#, fuzzy
 msgid "This change will have consequences on your workflow as the produced artifacts are now under a `quarkus-app` directory."
-msgstr ""
+msgstr "この変更は、生成された成果物が `quarkus-app` ディレクトリの下に置かれるようになったため、ワークフローに影響を及ぼします。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:37
+#, fuzzy
 msgid "So instead of starting your application with:"
-msgstr ""
+msgstr "でアプリケーションを起動するのではなく"
 
 #. type: delimited block -
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:41
@@ -116,8 +134,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:44
+#, fuzzy
 msgid "You will now start it with:"
-msgstr ""
+msgstr "これでスタートします。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:48
@@ -127,23 +146,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:51
+#, fuzzy
 msgid "When deploying your application, you need to deploy the whole `quarkus-app` directory."
-msgstr ""
+msgstr "アプリケーションをデプロイする際には、 `quarkus-app` ディレクトリ全体をデプロイする必要があります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:53
+#, fuzzy
 msgid "Your Dockerfiles will also need to be adjusted to take this into account."
-msgstr ""
+msgstr "また、Dockerfilesもこれを考慮して調整する必要があります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:55
+#, fuzzy
 msgid "You can find more details in our https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.12#fast-jar-as-default[Migration guide]."
-msgstr ""
+msgstr "詳細は link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.12#fast-jar-as-default[移住ガイドを]ご覧ください。"
 
 #. type: delimited block =
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:59
+#, fuzzy
 msgid "If it's not the right time for you to change your workflow, you can easily go back to the previous packaging by adding the following property to your `application.properties`:"
-msgstr ""
+msgstr "ワークフローを変更するタイミングではない場合は、 `application.properties`.NET に以下のプロパティを追加することで、簡単に以前のパッケージに戻ることができます。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:63
@@ -159,13 +182,15 @@ msgstr "RESTEasy Reactive"
 
 #. type: delimited block =
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:70
+#, fuzzy
 msgid "We continue improving RESTEasy Reactive at a steady pace, and this time, we introduced Multipart support."
-msgstr ""
+msgstr "RESTEasy Reactiveの改善を着実に続けており、今回はMultipart対応を導入しました。"
 
 #. type: delimited block =
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:72
+#, fuzzy
 msgid "It is very similar to the Multipart support of RESTEasy and looks like:"
-msgstr ""
+msgstr "RESTEasyのMultipart対応に非常に似ていて、見た目は以下のようになっています。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:76
@@ -214,35 +239,39 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:95
+#, fuzzy
 msgid "You can find more information about it in the updated https://quarkus.io/guides/resteasy-reactive#handling-multipart-form-data[RESTEasy Reactive guide]."
-msgstr ""
+msgstr "それについての詳細は、更新された link:https://quarkus.io/guides/resteasy-reactive#handling-multipart-form-data[RESTEasy Reactiveガイド]に記載されています。"
 
 #. type: Title ===
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:96
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "GraalVM 21"
-msgstr ""
+msgstr "GraalVM 21"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:99
+#, fuzzy
 msgid "The recommended version of GraalVM for Quarkus 1.12 is GraalVM 21.0."
-msgstr ""
+msgstr "GraalVM for Quarkus 1.12の推奨バージョンはGraalVM 21.0です。"
 
 #. type: Title ===
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:100
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Vert.x Axle and RX Java managed instances gone"
-msgstr ""
+msgstr "Vert.x AxleとRXのJavaマネージドインスタンスがなくなった"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:103
+#, fuzzy
 msgid "They had been deprecated for quite a while, they are now gone."
-msgstr ""
+msgstr "かなり前から非推奨になっていましたが、今はもうありません。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:105
+#, fuzzy
 msgid "Either use the raw Vert.x instance of the Mutiny one."
-msgstr ""
+msgstr "Mutiny の生の Vert.x インスタンスを使用します。"
 
 #. type: Title ===
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:106
@@ -252,8 +281,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:109
+#, fuzzy
 msgid "You can get the full changelogs of https://github.com/quarkusio/quarkus/releases/tag/1.12.0.CR1[1.12.0.CR1], and https://github.com/quarkusio/quarkus/releases/tag/1.12.0.Final[1.12.0.Final] on GitHub."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.12.0.CR1[1.12.0.CR1] と link:https://github.com/quarkusio/quarkus/releases/tag/1.12.0.Final[1.12.0.Final]の完全な変更ログは GitHub で取得できます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:110
@@ -279,13 +309,15 @@ msgstr "貢献者"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:120
+#, fuzzy
 msgid "The Quarkus community is growing and has now https://github.com/quarkusio/quarkus/graphs/contributors[445 contributors].  Many many thanks to each and everyone of them."
-msgstr ""
+msgstr "Quarkusコミュニティは成長しており、現在 link:https://github.com/quarkusio/quarkus/graphs/contributors[445人の貢献者が]います。一人ひとりの貢献者に多くの感謝の意を表します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:122
+#, fuzzy
 msgid "In particular for the 1.12 release, thanks to Alex Soto, Alexey Loubyansky, Andy Damevin, artsemstones, Auri Munoz, Bernhard Lutzmann, Bill Burke, Clement Escoffier, Erin Schnabel, Ertunc Aybars, essobedo, Falko Modler, Florian Heubeck, Foivos Zakkak, Galder Zamarreño, Gaétan Collaud, George Gastaldi, Georgios Andrianakis, Guillaume Le Floch, Guillaume Smet, Gwenneg Lepage, Henrique Prange, Ioannis Canellos, Jaikiran Pai, James Netherton, Jan Martiška, JiriOndrusek, Johnnes Souza, Joost Baas, Jose, Jose Ignacio Gil Jaldo, Josef Smrcka, Julien Ponge, Katia Aresti, Ken Finnigan, Knut Wannheden, kstrempel, Ladislav Thon, Loïc Mathieu, Lucas Reeh, Maciej Walkowiak, Mahieddine Cherif, Maik Möwes, manusa, Manyanda Chitimbo, Martin Kouba, Martin Panzer, Matej Novotny, Matej Vasek, Maxime DAVID, Mayank Kunwar, Michał Szynkiewicz, Moritz Becker, mrizzi, Nuno Alves, Oscar, PAPADOPOULOS Nikolaos, Peter Palaga, Petr Široký, Phillip Krüger, René Grob, Robert Stupp, Roberto Cortez, Rostislav Svoboda, Sanne Grinovero, SaumyaSingh1, sebthom, Sergey Beryozkin, S.H, Stuart Douglas, Stéphane Épardaud, Suleimenov Yelzhas, Ted Won, Thomas McWork, Thomas Pfaff, Thomas Segismont, Timothy Power, Tobias Stadler, Vasilis Andritsoudis, Vincent Sevel, xstefank, and Yoann Rodière."
-msgstr ""
+msgstr "特に1.12リリースのために、アレックス-ソト、アレクセイLoubyansky、アンディDamevin、artsemstones、アウリ-ムノス、ベルンハルト-ルッツマン、ビル-バーク、クレメント-エスコフィエ、エリン-シュナーベル、Ertunc Aybars、 essobedo、ファルコ-モドラー、フロリアン・ホイベック、Foivos Zakkak、Galder Zamarreño、Gaétan Collaudに感謝しています。ジョージGastaldi、ゲオルギオスAndrianakis、ギヨームLe Floch、ギヨームSmet、Gwenneg Lepage、Henrique Prange、Ioannis Canellos、Jaikiran Pai、James Netherton、Jan Martiška、JiriOndrusek、Johnnes Souza、Joost Baas、Jose、ホセ、Jose Ignacio Gil Jaldo、Josef Smrcka。Julien Ponge, Katia Aresti, Ken Finnigan, Knut Wannheden, kstrempel, Ladislav Thon, Loïc Mathieu, Lucas Reeh, Maciej Walkowiak, Mahieddine Cherif, Maik Möwes, manusa, Mananda Chitimbo, Martin Kouba, Martin Panzer, Matej Novotny, Matej Vasek, Maxime DAVID.Mayank Kunwar, Michał Szynkiewicz, Moritz Becker, mrizzi, Nuno Alves, Oscar, PAPADOPOULOS Nikolaos, Peter Palaga, Petr Široký, Phillip Krüger, René Grob, Robert Stupp, Roberto Cortez, Rostislav Svoboda, Sanne Grinovero, SaumyaSingh1, sebthom, Sergey Beryozkin, S. H, Stuart Douglas, Stéphane Épardaud, Suleimenov Yelzhas, Ted Won, Thomas McWork, Thomas Pfaff, Thomas Segismont, Timothy Power.H、スチュアート・ダグラス、ステファン・エパルドー、スレイメノフ・イェルジャス、テッド・ウォン、トーマス・マクワーク、トーマス・ファフ、トーマス・セギモン、ティモシー・パワー、トビアス・スタドラー、ヴァシリス・アンドリツースーディス、ヴィンセント・セヴェル、xstefank、ヨアン・ロディアール。"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:123
