Update .po files

--- a/l10n/po/ja_JP/_posts/2021-02-10-resteasy-reactive-faq.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-02-10-resteasy-reactive-faq.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-02-17 07:09+0000\n"
+"POT-Creation-Date: 2021-02-24 13:16+0000\n"
 "PO-Revision-Date: 2021-02-17 13:17+0900\n"
 "Last-Translator: Hiroshi Yamanaka <hyamanak@redhat.com>\n"
 "Language-Team: \n"
@@ -47,7 +47,7 @@ msgstr ""
 msgid "The purpose of this blog post is to clear up some confusion about RESTEasy Reactive and answer some commonly asked questions around it."
 msgstr "このブログ記事の目的は、RESTEasy Reactive についての混乱を解消し、よくある質問に答えることです。"
 
-#. type: Title ===
+#. type: Title ==
 #: upstream/_posts/2021-02-10-resteasy-reactive-faq.adoc:13
 #, no-wrap
 msgid "Acknowledgement"
@@ -55,7 +55,9 @@ msgstr "謝辞"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-10-resteasy-reactive-faq.adoc:16
-msgid "This blog post would not have been possible without the expert advice of https://twitter.com/clementplop[Clement Escoffier] and https://twitter.com/unfromage[Stéphane Épardaud]"
+#, fuzzy
+#| msgid "This blog post would not have been possible without the expert advice of https://twitter.com/clementplop[Clement Escoffier] and https://twitter.com/unfromage[Stéphane Épardaud]"
+msgid "This blog post would not have been possible without the expert advice of https://twitter.com/clementplop[Clement Escoffier] and https://twitter.com/unfromage[Stéphane Épardaud]."
 msgstr "このブログ記事は、 link:https://twitter.com/clementplop[Clement Escoffier] と link:https://twitter.com/unfromage[Stéphane Épardaud] の専門的なアドバイスなしでは実現できませんでした。"
 
 #. type: Title ==
