--- a/l10n/stats/override.csv
+++ b/l10n/stats/override.csv
@@ -1,5 +1,5 @@
 Filename, Last modified, Upstream Last modified, Up to date
-l10n/override/ja_JP/_data/projectfooter.yaml, 2021-02-06 14:23:31 +0000, 2021-02-24 12:27:47 +0000, NG
+l10n/override/ja_JP/_data/projectfooter.yaml, 2021-02-24 14:03:29 +0000, 2021-02-24 12:27:47 +0000, OK
 l10n/override/ja_JP/community.md, 2021-02-06 14:23:31 +0000, 2020-04-22 14:43:38 +0000, OK
 l10n/override/ja_JP/_guides/guides.md, 2021-02-06 14:23:31 +0000, 2019-06-18 15:53:29 +0000, OK
 l10n/override/ja_JP/_layouts/extensions.html, 2021-02-06 14:23:31 +0000, 2019-08-01 09:53:08 +0000, OK
@@ -9,12 +9,12 @@ l10n/override/ja_JP/_includes/community-contrib-band.html, 2021-02-06 14:23:31 +
 l10n/override/ja_JP/_includes/homepage-video-band.html, 2021-02-06 14:23:31 +0000, 2019-11-04 22:19:28 +0000, OK
 l10n/override/ja_JP/_includes/homepage-imperative_and_reactive-band.html, 2021-02-06 14:23:31 +0000, 2019-11-05 22:20:38 +0000, OK
 l10n/override/ja_JP/_includes/homepage-extensions-band.html, 2021-02-06 14:23:31 +0000, 2019-11-04 22:19:28 +0000, OK
-l10n/override/ja_JP/_includes/support-help-band.html, 2021-02-06 14:23:31 +0000, 2021-02-24 12:27:47 +0000, NG
+l10n/override/ja_JP/_includes/support-help-band.html, 2021-02-24 14:03:29 +0000, 2021-02-24 12:27:47 +0000, OK
 l10n/override/ja_JP/_includes/get-started-band.html, 2021-02-06 14:23:31 +0000, 2019-12-09 11:06:05 +0000, OK
 l10n/override/ja_JP/_includes/homepage-container_first-band.html, 2021-02-06 14:23:31 +0000, 2019-11-05 08:09:03 +0000, OK
 l10n/override/ja_JP/_includes/homepage-hero-band.html, 2021-02-06 14:23:31 +0000, 2021-01-20 12:15:38 +0000, OK
 l10n/override/ja_JP/_includes/header-navigation.html, 2021-02-06 14:23:31 +0000, 2020-07-01 09:32:46 +0000, OK
 l10n/override/ja_JP/_includes/homepage-developer_joy-band.html, 2021-02-06 14:23:31 +0000, 2020-10-07 18:07:22 +0000, OK
-l10n/override/ja_JP/_includes/feedback-community-band.html, 2021-02-06 14:23:31 +0000, 2021-02-24 12:27:47 +0000, NG
+l10n/override/ja_JP/_includes/feedback-community-band.html, 2021-02-24 14:03:29 +0000, 2021-02-24 12:27:47 +0000, OK
 l10n/override/ja_JP/_includes/support-options-band.html, 2021-02-06 14:23:31 +0000, 2020-05-22 09:21:09 +0000, OK
 l10n/override/ja_JP/blog.md, 2021-02-19 14:15:26 +0000, 2020-08-03 19:08:41 +0000, OK
