Update override stats

--- a/l10n/stats/override.csv
+++ b/l10n/stats/override.csv
@@ -15,6 +15,6 @@ l10n/override/ja_JP/_includes/homepage-container_first-band.html, 2021-02-06 14:
 l10n/override/ja_JP/_includes/homepage-hero-band.html, 2021-02-06 14:23:31 +0000, 2021-01-20 12:15:38 +0000, OK
 l10n/override/ja_JP/_includes/header-navigation.html, 2021-02-06 14:23:31 +0000, 2020-07-01 09:32:46 +0000, OK
 l10n/override/ja_JP/_includes/homepage-developer_joy-band.html, 2021-02-06 14:23:31 +0000, 2020-10-07 18:07:22 +0000, OK
-l10n/override/ja_JP/_includes/feedback-community-band.html, 2021-02-24 14:03:29 +0000, 2021-02-25 10:58:25 +0000, NG
+l10n/override/ja_JP/_includes/feedback-community-band.html, 2021-02-25 12:03:23 +0000, 2021-02-25 10:58:25 +0000, OK
 l10n/override/ja_JP/_includes/support-options-band.html, 2021-02-06 14:23:31 +0000, 2020-05-22 09:21:09 +0000, OK
 l10n/override/ja_JP/blog.md, 2021-02-19 14:15:26 +0000, 2020-08-03 19:08:41 +0000, OK
