Translate: _guides/reactive-messaging-http.adoc.po

--- a/l10n/po/ja_JP/_guides/reactive-messaging-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-messaging-http.adoc.po
@@ -3,33 +3,32 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:07+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-25 22:19+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/reactive-messaging-http.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Using HTTP and WebSockets with Reactive Messaging"
-msgstr "Quarkus - リアクティブメッセージングでHTTPとWebSocketを使用する"
+msgstr "Quarkus - リアクティブメッセージングで HTTP と WebSocket を使用する"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:12
-#, fuzzy
 msgid "This guide demonstrates how your Quarkus application can utilize MicroProfile Reactive Messaging to consume and produce HTTP messages."
-msgstr "このガイドでは、QuarkusアプリケーションがMicroProfile Reactive Messagingを使用してHTTPメッセージを消費および生成する方法を説明します。"
+msgstr "このガイドでは、Quarkus アプリケーションが MicroProfile Reactive Messaging を使用して HTTP メッセージを消費および生成する方法を説明します。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-http.adoc:13
@@ -44,7 +43,6 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:18
-#, fuzzy
 msgid "less than 15 minutes"
 msgstr "15分以内"
 
@@ -65,31 +63,28 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:22
-#, fuzzy
 msgid "GraalVM, Docker or Podman installed if you want to run in native mode."
-msgstr "ネイティブモードで実行したい場合は、GraalVM、Docker、Podmanがインストールされています。"
+msgstr "ネイティブモードで実行したい場合は、GraalVM、Docker、Podman がインストールされていること"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-http.adoc:23
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Architecture"
 msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:27
-#, fuzzy
 msgid "In this guide we will implement a service, namely `CostConverter` that consumes HTTP messages with costs in multiple currencies and converts each cost to its value in Euro."
-msgstr "このガイドでは、複数の通貨のコストを持つHTTPメッセージを消費し、各コストをユーロの値に変換するサービス、すなわち `CostConverter` を実装します。"
+msgstr "このガイドでは、複数の通貨のコストを持つ HTTP メッセージを消費し、各コストをユーロの値に変換するサービス、すなわち `CostConverter` を実装します。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:30
-#, fuzzy
 msgid "To let a user easily try out the service, we will implement an HTTP resource summing up the costs (`CostCollector`), and a simple web page to add new costs and watch the sum."
 msgstr "ユーザーが簡単にサービスを試すことができるように、コストを合計したHTTPリソース( `CostCollector` )と、新しいコストを追加して合計を見るためのシンプルなWebページを実装します。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-http.adoc:32
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
@@ -105,13 +100,12 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:40
-#, fuzzy
 msgid "The solution is located in the `reactive-messaging-http-quickstart` {quickstarts-tree-url}/reactive-messaging-http-quickstart[directory]."
 msgstr "ソリューションは `reactive-messaging-http-quickstart` {quickstarts-tree-url}/reactive-messaging-http-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-http.adoc:41
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven Project"
 msgstr "Mavenプロジェクトの作成"
 
@@ -134,19 +128,17 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:56
-#, fuzzy
 msgid "This command generates a Maven project, importing the Reactive Messaging and HTTP connector extensions."
-msgstr "このコマンドは、Reactive MessagingとHTTPコネクタ拡張をインポートしてMavenプロジェクトを生成します。"
+msgstr "このコマンドは、Reactive MessagingとHTTPコネクタエクステンションをインポートしてMavenプロジェクトを生成します。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-http.adoc:57
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The Converter"
 msgstr "コンバーター"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:60
-#, fuzzy
 msgid "Create the `src/main/java/org/acme/reactivehttp/CostConverter.java` file, with the following content:"
 msgstr "以下の内容の `src/main/java/org/acme/reactivehttp/CostConverter.java` ファイルを作成します。"
 
@@ -229,25 +221,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:104
-#, fuzzy
 msgid "Consume messages from the `incoming-costs` stream."
 msgstr "`incoming-costs` ストリームからメッセージを消費します。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:105
-#, fuzzy
 msgid "Dispatch returned values to the `outgoing-costs` stream."
 msgstr "返された値を `outgoing-costs` ストリームにディスパッチします。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:108
-#, fuzzy
 msgid "Consume an event with payload of type `Cost` and produce a `double`.  In the case of consuming an arbitrary object, the reactive-messaging-http extension will attempt to deserialize the request body assuming it is JSON."
-msgstr "`Cost` 型のペイロードを持つイベントを消費して `double` を生成します。任意のオブジェクトを消費する場合、reactive-messaging-http 拡張モジュールは、リクエストボディが JSON であると仮定して、リクエストボディをデシリアライズしようとします。"
+msgstr "`Cost` 型のペイロードを持つイベントを消費して `double` を生成します。任意のオブジェクトを消費する場合、reactive-messaging-http エクステンションは、リクエストボディが JSON であると仮定して、リクエストボディをデシリアライズしようとします。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:110
-#, fuzzy
 msgid "Let's define the `Cost` class:"
 msgstr "`Cost` クラスを定義してみましょう。"
 
@@ -299,43 +287,37 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:140
-#, fuzzy
 msgid "In the next step, we will create configurations for both streams in the `application.properties` file."
 msgstr "次のステップでは、 `application.properties` ファイルに両方のストリームの設定を作成します。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-http.adoc:141
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Configuring the HTTP connector"
 msgstr "HTTPコネクタの設定"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:145
-#, fuzzy
 msgid "We need to configure the HTTP connector. This is done in the `application.properties` file.  The keys are structured as follows:"
 msgstr "HTTP コネクタを設定する必要があります。これは `application.properties` ファイルで行います。キーは以下のように構成されています。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:147
-#, fuzzy
 msgid "`mp.messaging.[outgoing|incoming].{channel-name}.{property}=value`"
-msgstr "`mp.messaging.[outgoing|incoming].{channel-name}.{property}=value`"
+msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:149
-#, fuzzy
 msgid "The `channel-name` segment must match the value set in the `@Incoming` and `@Outgoing` annotation:"
 msgstr "`channel-name` セグメントは、 `@Incoming` および `@Outgoing` アノテーションで設定された値と一致する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:151
-#, fuzzy
 msgid "`incoming-costs` -> a source that receives costs"
 msgstr "`incoming-costs` → コストを受け取るソース"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:152
-#, fuzzy
 msgid "`outgoing-costs` -> a sink that receives converted costs"
 msgstr "`outgoing-costs` → 換算されたコストを受け取るシンク"
 
@@ -386,15 +368,14 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-http.adoc:175
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The CostCollector"
 msgstr "コストコレクター"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:179
-#, fuzzy
 msgid "To illustrate that converting messages and passing them through works, let's add an endpoint that will receive the outgoing costs and sum them up.  This is a usual JAX-RS endpoint."
-msgstr "メッセージを変換して通過させることが機能することを説明するために、送信コストを受け取って集計するエンドポイントを追加してみましょう。これは通常のJAX-RSエンドポイントです。"
+msgstr "メッセージを変換して受け渡す様子を説明するために、送信コストを受け取って集計するエンドポイントを追加してみましょう。これは通常のJAX-RSエンドポイントです。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-messaging-http.adoc:188
@@ -449,25 +430,22 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-http.adoc:209
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The HTML page"
 msgstr "HTMLページ"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:212
-#, fuzzy
 msgid "To conveniently interact with the application, let's create a simple web page."
 msgstr "アプリケーションと便利にやりとりするために、簡単なWebページを作成してみましょう。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:215
-#, fuzzy
 msgid "The page will provide a form to add costs, and an info of the current sum of costs.  The page periodically updates the sum by requesting the current sum from `/cost-collector`."
 msgstr "このページでは、コストを追加するためのフォームと、現在のコストの合計の情報を提供します。ページは定期的に `/cost-collector` から現在の合計を要求することによって合計を更新します。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:217
-#, fuzzy
 msgid "Create the `src/main/resources/META-INF/resources/index.html` file, with the following content:"
 msgstr "以下の内容の `src/main/resources/META-INF/resources/index.html` ファイルを作成します。"
 
@@ -573,15 +551,14 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-http.adoc:282
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Get it running"
-msgstr "稼動させる"
+msgstr "実行"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:285
-#, fuzzy
 msgid "Run the application using:"
-msgstr "を使用してアプリケーションを実行します。"
+msgstr "以下でアプリケーションを実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-messaging-http.adoc:289
@@ -591,21 +568,19 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:292
-#, fuzzy
 msgid "Open `http://localhost:8080/index.html` in your browser."
-msgstr "開く `http://localhost:8080/index.html` をブラウザに表示してください。"
+msgstr "ブラウザで `http://localhost:8080/index.html` を開いてください。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-http.adoc:294
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Running Native"
-msgstr "ネイティブの実行"
+msgstr "ネイティブ実行"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:297
-#, fuzzy
 msgid "You can build the native executable with:"
-msgstr "でネイティブ実行ファイルをビルドすることができます。"
+msgstr "以下ででネイティブ実行ファイルをビルドすることができます。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-messaging-http.adoc:301
@@ -621,13 +596,12 @@ msgstr "さらに詳しく"
 
 #. type: Title ===
 #: upstream/_guides/reactive-messaging-http.adoc:305
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "HTTP connector options"
 msgstr "HTTP コネクタのオプション"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:307
-#, fuzzy
 msgid "All `quarkus-http` connector options:"
 msgstr "`quarkus-http` コネクタの全オプション。"
 
@@ -716,25 +690,22 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/reactive-messaging-http.adoc:345
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "WebSockets"
-msgstr "ウェブソケット"
+msgstr "WebSocket"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:349
-#, fuzzy
 msgid "Except of the `quarkus-http` connector, the `quarkus-reactive-messaging-http` extension also brings in `quarkus-websocket` - a connector for exposing and feeding WebSockets.  At the moment only binary data is supported."
-msgstr "`quarkus-http` コネクタ以外に、 `quarkus-reactive-messaging-http` 拡張機能には `quarkus-websocket` - WebSocket を公開して供給するためのコネクタ - が組み込まれています。現時点ではバイナリーデータのみサポートされています。"
+msgstr "`quarkus-http` コネクタ以外に、 `quarkus-reactive-messaging-http` エクステンションには `quarkus-websocket` - WebSocket を公開して供給するためのコネクタ - が組み込まれています。現時点ではバイナリーデータのみサポートされています。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:353
-#, fuzzy
 msgid "While the sink of the HTTP connector checks if the message is consumed by the remote endpoint, the WebSocket sink does not. It may happen that a failure to receive a message is not reported, e.g. if the remote side closes the WebSocket connection in a crucial moment."
 msgstr "HTTP コネクタのシンクは、メッセージがリモートエンドポイントによって消費されるかどうかをチェックしますが、WebSocket シンクはチェックしません。例えば、リモート側が肝心な時に WebSocket 接続を閉じた場合など、メッセージの受信に失敗したことが報告されないことがあるかもしれません。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:355
-#, fuzzy
 msgid "The `quarkus-websocket` connector is configured with the following properties:"
 msgstr "`quarkus-websocket` コネクタは、以下のプロパティーで構成されています。"
 
@@ -806,24 +777,21 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/reactive-messaging-http.adoc:389
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Reactive Messaging"
 msgstr "リアクティブメッセージング"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:391
-#, fuzzy
 msgid "This extension utilizes MicroProfile Reactive Messaging to build data streaming applications."
-msgstr "この拡張機能は、MicroProfile Reactive Messaging を利用してデータストリーミングアプリケーションを構築します。"
+msgstr "このエクステンションは、MicroProfile Reactive Messaging を利用してデータストリーミングアプリケーションを構築します。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:394
-#, fuzzy
 msgid "If you did the Kafka or AMQP quickstart, you have realized that it's the same code.  The only difference is the connector configuration."
 msgstr "KafkaやAMQPのクイックスタートをした人は、同じコードであることに気づいたはずです。違いはコネクタの設定だけです。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:395
-#, fuzzy
 msgid "If you want to go further check the documentation of https://smallrye.io/smallrye-reactive-messaging[SmallRye Reactive Messaging], the implementation used in Quarkus."
 msgstr "さらに詳しく知りたい場合は、Quarkusで使用されている実装である link:https://smallrye.io/smallrye-reactive-messaging[SmallRye Reactive Messaging] のドキュメントを確認してください。"
