--- a/l10n/po/ja_JP/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc.po
@@ -125,7 +125,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:44
 msgid "You will now start it with:"
-msgstr "こちらで起動します:"
+msgstr "これからは以下で起動します:"
 
 #. type: delimited block -
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:48
