--- a/l10n/po/ja_JP/_guides/reactive-messaging-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-messaging-http.adoc.po
@@ -101,7 +101,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:40
 msgid "The solution is located in the `reactive-messaging-http-quickstart` {quickstarts-tree-url}/reactive-messaging-http-quickstart[directory]."
-msgstr "ソリューションは `reactive-messaging-http-quickstart` {quickstarts-tree-url}/reactive-messaging-http-quickstart[directory] にあります。"
+msgstr "ソリューションは `reactive-messaging-http-quickstart` {quickstarts-tree-url}/reactive-messaging-http-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-http.adoc:41
