Apply translation memory

--- a/l10n/po/ja_JP/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc.po
@@ -43,7 +43,7 @@ msgstr ""
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:13
 #, no-wrap
 msgid "Codestarts"
-msgstr ""
+msgstr "Codestarts"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:18
@@ -54,29 +54,29 @@ msgstr ""
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:19
 #, no-wrap
 msgid "quarkus-tools1.png"
-msgstr ""
+msgstr "quarkus-tools1.png"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:22
 #, no-wrap
 msgid "Moving Forward"
-msgstr ""
+msgstr "将来"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:26
 msgid "If you have any questions, suggestions or feedback, by all means please https://github.com/redhat-developer/intellij-quarkus/issues[open an issue]."
-msgstr ""
+msgstr "ご質問、ご意見、ご感想などがありましたら、ぜひ link:https://github.com/redhat-developer/intellij-quarkus/issues[イシューを開いて]ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:28
 msgid "Thank you for reading and stay tuned for the next release!"
-msgstr ""
+msgstr "お読みいただきありがとうございました。次のリリースをお待ちください!"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:29
 #, no-wrap
 msgid "Links"
-msgstr ""
+msgstr "リンク"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:32
