--- a/l10n/po/ja_JP/_guides/faq.adoc.po
+++ b/l10n/po/ja_JP/_guides/faq.adoc.po
@@ -36,9 +36,8 @@ msgstr "macOS でのネイティブ実行ファイルが `error: unknown type na
 
 #. type: Plain text
 #: upstream/_guides/faq.adoc:21
-#, fuzzy
 msgid "Your macOS has the wrong `*.h` files compared to the OS and no gcc compilation will work.  This can happen when you migrate from versions of the OS.  See https://stackoverflow.com/questions/48029309/cannot-compile-any-c-programs-error-unknown-type-name-uint8-t"
-msgstr "あなたのmacOSはOSと比較して `*.h` ファイルが間違っていて、gccコンパイルが動作しません。これはOSのバージョンから移行したときに起こる可能性があります。 https://stackoverflow.com/questions/48029309/cannot-compile-any-c-programs-error-unknown-type-name-uint8-t 。"
+msgstr "お使いの macOS には、その OS とは異なる `*.h` ファイルがあるため、gcc コンパイルが動作しません。この問題は、その OS のバージョンから移行したときに起こる可能性があります。 https://stackoverflow.com/questions/48029309/cannot-compile-any-c-programs-error-unknown-type-name-uint8-t を参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/faq.adoc:23
@@ -53,12 +52,12 @@ msgstr "`sudo mv /usr/local/include /usr/local/include.old`"
 #. type: Plain text
 #: upstream/_guides/faq.adoc:26
 msgid "Reinstall XCode for good measure"
-msgstr "念のためにXCodeを再インストールします。"
+msgstr "念のため Xcode を再インストールします。"
 
 #. type: Plain text
 #: upstream/_guides/faq.adoc:27
 msgid "(optional?) `brew install llvm`"
-msgstr "(オプション?) `brew install llvm`"
+msgstr "(任意?) `brew install llvm`"
 
 #. type: Plain text
 #: upstream/_guides/faq.adoc:28
@@ -68,4 +67,4 @@ msgstr "一般的には、ネイティブコンパイルでの brew の依存関
 #. type: Plain text
 #: upstream/_guides/faq.adoc:29
 msgid "The executable should work now."
-msgstr "実行ファイルが動作するようになるはずです。"
+msgstr "これで、実行ファイルが動作するようになるはずです。"
