--- a/l10n/po/ja_JP/_guides/faq.adoc.po
+++ b/l10n/po/ja_JP/_guides/faq.adoc.po
@@ -32,12 +32,12 @@ msgstr "ネイティブコンパイル"
 #: upstream/_guides/faq.adoc:17
 #, no-wrap
 msgid "Native executable fails on macOS with `error: unknown type name 'uint8_t'`"
-msgstr "macOS でのネイティブ実行ファイルが `error: unknown type name 'uint8_t'` で失敗します"
+msgstr "macOS でのネイティブ実行ファイルが `error: unknown type name 'uint8_t'` で失敗する"
 
 #. type: Plain text
 #: upstream/_guides/faq.adoc:21
 msgid "Your macOS has the wrong `*.h` files compared to the OS and no gcc compilation will work.  This can happen when you migrate from versions of the OS.  See https://stackoverflow.com/questions/48029309/cannot-compile-any-c-programs-error-unknown-type-name-uint8-t"
-msgstr "お使いの macOS には、その OS とは異なる `*.h` ファイルがあるため、gcc コンパイルが動作しません。この問題は、その OS のバージョンから移行したときに起こる可能性があります。 https://stackoverflow.com/questions/48029309/cannot-compile-any-c-programs-error-unknown-type-name-uint8-t を参照してください。"
+msgstr "お使いの macOS には、その OS とは異なる `*.h` ファイルがあるため、gcc コンパイルが動作しません。この問題は、その OS の別のバージョンから移行したときに起こる可能性があります。 https://stackoverflow.com/questions/48029309/cannot-compile-any-c-programs-error-unknown-type-name-uint8-t を参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/faq.adoc:23
@@ -62,7 +62,7 @@ msgstr "(任意?) `brew install llvm`"
 #. type: Plain text
 #: upstream/_guides/faq.adoc:28
 msgid "generally reinstall your brew dependencies with native compilation"
-msgstr "一般的には、ネイティブコンパイルでの brew の依存関係を再インストールします。"
+msgstr "通常は、ネイティブコンパイルで brew の依存関係を再インストールします。"
 
 #. type: Plain text
 #: upstream/_guides/faq.adoc:29
