Add machine translation

--- a/l10n/po/ja_JP/_guides/reactive-messaging-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-messaging-http.adoc.po
@@ -303,8 +303,9 @@ msgstr "HTTP コネクタを設定する必要があります。これは `appli
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:147
+#, fuzzy
 msgid "`mp.messaging.[outgoing|incoming].{channel-name}.{property}=value`"
-msgstr ""
+msgstr "`mp.messaging.[outgoing|incoming].{channel-name}.{property}=value`"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging-http.adoc:149
