--- a/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
@@ -644,7 +644,7 @@ msgstr "VS Codeでプロジェクトディレクトリーを開きます。Java 
 #: upstream/_guides/gradle-tooling.adoc:316
 #, no-wrap
 msgid "Building a native executable"
-msgstr "ネイティブ実行可能ファイルの構築"
+msgstr "ネイティブ実行可能ファイルのビルド"
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:319
@@ -659,7 +659,7 @@ msgstr "`GRAALVM_HOME`  を設定し、GraalVM バージョン {graalvm-version}
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:324
 msgid "Create a native executable using: `./gradlew build -Dquarkus.package.type=native`.  A native executable will be present in `build/`."
-msgstr " `./gradlew build -Dquarkus.package.type=native` を実行し、ネイティブ実行ファイルを作成します。ネイティブ実行ファイルは `build/` に存在します。"
+msgstr "`./gradlew build -Dquarkus.package.type=native` を実行し、ネイティブ実行ファイルを作成します。ネイティブ実行ファイルは `build/` に存在します。"
 
 #. type: delimited block =
 #: upstream/_guides/gradle-tooling.adoc:329
