Translate 2021-02-17-intellij-quarkus-tools-1.4.0.adoc.po

--- a/l10n/po/ja_JP/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-25 15:08+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-27 10:47+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:7
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Tools for IntelliJ 1.4.0 released!'\n"
@@ -34,7 +34,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus Tools for IntelliJ 1.4.0 released!\n"
+"title: 'Quarkus Tools for IntelliJ 1.4.0 がリリースされました!'\n"
 "date: 2021-02-17\n"
 "tags: announcement ide\n"
 "author: jeffmaury\n"
@@ -42,9 +42,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:12
-#, fuzzy
 msgid "We are very pleased to announce the 1.4.0 release of Quarkus Tools for IntelliJ.  This release enhances codestarts support in the Quarkus project wizard."
-msgstr "Quarkus Tools for IntelliJの1.4.0リリースを発表できることを大変嬉しく思います。このリリースでは、Quarkusプロジェクトウィザードのコードスタートのサポートが強化されました。"
+msgstr "Quarkus Tools for IntelliJの1.4.0リリースを発表できることを大変嬉しく思います。このリリースでは、Quarkusプロジェクトウィザードのcodestartsのサポートが強化されました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:13
@@ -54,9 +53,8 @@ msgstr "Codestarts"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:18
-#, fuzzy
 msgid "The Quarkus project wizard now highlights codestarts enabled extension with a specific icon (right to the extension name), similar to code.quarkus.io, allowing users to better identify codestarts enabled extensions."
-msgstr "Quarkusプロジェクトウィザードでは、code.quarkus.ioと同様に、codestartsを有効にした拡張機能を特定のアイコン（拡張機能名の右側）で強調表示するようになり、ユーザーはcodestartsを有効にした拡張機能をよりよく識別できるようになりました。"
+msgstr "Quarkusプロジェクトウィザードでは、code.quarkus.ioと同様に、codestartsを有効にしたエクステンションを特定のアイコン（エクステンション名の右側）で強調表示するようになり、ユーザーはcodestartsを有効にしたエクステンションをよりよく識別できるようになりました。"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:19
@@ -73,7 +71,7 @@ msgstr "将来"
 #. type: Plain text
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:26
 msgid "If you have any questions, suggestions or feedback, by all means please https://github.com/redhat-developer/intellij-quarkus/issues[open an issue]."
-msgstr "ご質問、ご意見、ご感想などがありましたら、ぜひ link:https://github.com/redhat-developer/intellij-quarkus/issues[イシューを開いて]ください。"
+msgstr "ご質問、ご意見、ご感想などがありましたら、ぜひ link:https://github.com/redhat-developer/intellij-quarkus/issues[Issueを開いて]ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:28
@@ -88,12 +86,10 @@ msgstr "リンク"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:32
-#, fuzzy
 msgid "GitHub repository: https://github.com/redhat-developer/intellij-quarkus"
 msgstr "GitHub リポジトリ: https://github.com/redhat-developer/intellij-quarkus"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc:32
-#, fuzzy
 msgid "Open an issue: https://github.com/redhat-developer/intellij-quarkus/issues"
-msgstr "課題を開く: https://github.com/redhat-developer/intellij-quarkus/issues"
+msgstr "Issueを開く: https://github.com/redhat-developer/intellij-quarkus/issues"
